fix collapse btn label alignment

--- a/css/skeleton-fontawesome-buttons.css
+++ b/css/skeleton-fontawesome-buttons.css
@@ -7,7 +7,7 @@
     width: 38px;
     line-height: 38px;
     font-size: 1.4rem;
-    vertical-align: top;
+    vertical-align: middle;
 }
 
 td .button-icon {
